--- a/themes/phoenix/templates/alphabrowse/home.phtml
+++ b/themes/phoenix/templates/alphabrowse/home.phtml
@@ -122,7 +122,7 @@
               </div>
             <?php endif; ?>
 
-            <?php if ($item['note']): ?>
+            <?php if ($item['note'] ?? false): ?>
               <div>
                 <?=$this->transEsc('Note') ?>:
                 <ul>
