--- a/themes/phoenix/templates/RecordDriver/DefaultRecord/list-entry.phtml
+++ b/themes/phoenix/templates/RecordDriver/DefaultRecord/list-entry.phtml
@@ -143,14 +143,21 @@
               */
             $openUrl = $this->openUrl($this->driver, 'results');
             $openUrlActive = $openUrl->isActive();
+            $doi = $this->doi($this->driver, 'results');
+            $doiActive = $doi->isActive();
             // Account for replace_other_urls setting
             $urls = $this->record($this->driver)->getLinkDetails($openUrlActive);
 
-              if ($openUrlActive || !empty($urls)):
+              if ($openUrlActive || $doiActive || !empty($urls)):
             ?>
               <?php if ($openUrlActive): ?>
                 <?=$openUrl->renderTemplate()?>
               <?php endif;?>
+
+              <?php if ($doiActive): ?>
+                <br/>
+                <?=$doi->renderTemplate()?>
+              <?php endif; ?>
 
               <?php if (!is_array($urls)) { $urls = []; }
                 if(!$this->driver->isCollection()):
