--- a/themes/phoenix/templates/myresearch/menu.phtml
+++ b/themes/phoenix/templates/myresearch/menu.phtml
@@ -3,6 +3,7 @@
   $patron = $user ? $this->auth()->getILSPatron() : false;
   $capabilityParams = $patron ? ['patron' => $patron] : [];
 ?>
+<!--<button class="close-offcanvas btn btn-link" data-toggle="offcanvas"><?=$this->transEsc('navigate_back') ?></button>-->
 <h4><?=$this->transEsc('Your Account')?></h4>
 <div class="list-group">
   <?php //if ($this->userlist()->getMode() !== 'disabled'): ?>
@@ -12,23 +13,27 @@
   <?php //endif; ?>
   <?php if ('ils-none' !== $this->ils()->getOfflineMode()): ?>
     <?php if ($this->ils()->checkCapability('getMyTransactions', $capabilityParams)): ?>
-      <a href="<?=$this->url('myresearch-checkedout')?>" class="list-group-item<?=$this->active == 'checkedout' ? ' active' : ''?>">
-        <i class="fa fa-fw fa-book" aria-hidden="true"></i> <?=$this->transEsc('Checked Out Items')?>
+      <a href="<?=$this->url('myresearch-checkedout')?>" class="flex list-group-item checkedout<?=$this->active == 'checkedout' ? ' active' : ''?>">
+        <span class="flex-col"><i class="fa fa-fw fa-book" aria-hidden="true"></i>&nbsp;<?=$this->transEsc('Checked Out Items')?></span>
+        <span class="checkedout-status status hidden"><i class="fa fa-spin fa-spinner" aria-hidden="true"></i></span>
       </a>
     <?php endif; ?>
     <?php if ($this->ils()->checkFunction('StorageRetrievalRequests', $capabilityParams)): ?>
-      <a href="<?=$this->url('myresearch-storageretrievalrequests')?>" class="list-group-item<?=$this->active == 'storageRetrievalRequests' ? ' active' : ''?>">
-        <i class="fa fa-fw fa-archive" aria-hidden="true"></i> <?=$this->transEsc('Storage Retrieval Requests')?>
+      <a href="<?=$this->url('myresearch-storageretrievalrequests')?>" class="list-group-item flex<?=$this->active == 'storageRetrievalRequests' ? ' active' : ''?>">
+        <span class="flex-col"><i class="fa fa-fw fa-archive" aria-hidden="true"></i> <?=$this->transEsc('Storage Retrieval Requests')?></span>
+        <span class="storageretrievalrequests-status status hidden"><i class="fa fa-spin fa-spinner" aria-hidden="true"></i></span>
       </a>
     <?php endif; ?>
     <?php if ($this->ils()->checkFunction('ILLRequests', $capabilityParams)): ?>
-    <a href="<?=$this->url('myresearch-illrequests')?>" class="list-group-item<?=$this->active == 'ILLRequests' ? ' active' : ''?>">
-      <i class="fa fa-fw fa-exchange" aria-hidden="true"></i> <?=$this->transEsc('Interlibrary Loan Requests')?>
+      <a href="<?=$this->url('myresearch-illrequests')?>" class="list-group-items flex<?=$this->active == 'ILLRequests' ? ' active' : ''?>">
+        <span class="flex-col"><i class="fa fa-fw fa-exchange" aria-hidden="true"></i> <?=$this->transEsc('Interlibrary Loan Requests')?></span>
+        <span class="illrequests-status status hidden"><i class="fa fa-spin fa-spinner" aria-hidden="true"></i></span>
     </a>
     <?php endif; ?>
     <?php if ($this->ils()->checkCapability('getMyFines', $capabilityParams)): ?>
-      <a href="<?=$this->url('myresearch-fines')?>" class="list-group-item<?=$this->active == 'fines' ? ' active' : ''?>">
-        <i class="fa fa-fw fa-usd" aria-hidden="true"></i> <?=$this->transEsc('Fines')?>
+      <a href="<?=$this->url('myresearch-fines')?>" class="list-group-item flex<?=$this->active == 'fines' ? ' active' : ''?>">
+        <span class="flex-col"><i class="fa fa-fw fa-usd" aria-hidden="true"></i>&nbsp;<?=$this->transEsc('Fines')?></span>
+        <span class="fines-status status hidden"><i class="fa fa-spin fa-spinner" aria-hidden="true"></i></span>
       </a>
     <?php endif; ?>
       <a href="<?=$this->url('myresearch-profile')?>" class="list-group-item<?=$this->active == 'profile' ? ' active' : ''?>">
@@ -49,8 +54,9 @@
 <h4>Manage Requests</h4>
 <div class="list-group">
   <?php if ($this->ils()->checkCapability('getMyHolds')): ?>
-    <a href="<?=$this->url('myresearch-holds')?>" class="list-group-item<?=$this->active == 'holds' ? ' active' : ''?>">
-      <i class="fa fa-fw fa-flag" aria-hidden="true"></i> <?=$this->transEsc('Requested Items')?>
+      <a href="<?=$this->url('myresearch-holds')?>" class="list-group-item flex<?=$this->active == 'holds' ? ' active' : ''?>">
+        <span class="flex-col"><i class="fa fa-fw fa-flag" aria-hidden="true"></i>&nbsp;<?=$this->transEsc('Holds and Recalls')?></span>
+        <span class="holds-status status hidden"><i class="fa fa-spin fa-spinner" aria-hidden="true"></i></span>
     </a>
   <?php endif; ?>
   <a href="<?=$this->url('myresearch-storagerequest')?>" class="list-group-item<?=$this->active == 'storagerequest' ? 'active' : ''?>">
