--- a/themes/phoenix/templates/RecordDriver/DefaultRecord/result-list.phtml
+++ b/themes/phoenix/templates/RecordDriver/DefaultRecord/result-list.phtml
@@ -162,7 +162,7 @@
           <?php if ($openUrlActive || $doiActive || !empty($urls)): ?>
           <?php if ($openUrlActive): ?>
             <?=$openUrl->renderTemplate()?>
-          <?php endif; ?>i
+          <?php endif; ?>
           <?php if ($doiActive): ?>
             <br/>
             <?=$doi->renderTemplate()?>
