Added a tagline to the scan and deliver service link.

--- a/themes/phoenix/less/phoenix.less
+++ b/themes/phoenix/less/phoenix.less
@@ -1430,3 +1430,9 @@ a.tool:hover .arrow-left {
         content: "\f106";
     }
 }
+
+/* Service link tagline */
+.service-tagline {
+    margin-left: -15px;
+    padding-right: 15px;
+}
