Added Video and Audio Streaming for 928g

--- a/themes/phoenix/templates/search/advanced/solr.phtml
+++ b/themes/phoenix/templates/search/advanced/solr.phtml
@@ -485,6 +485,7 @@ $formats = [
 	['value' => 'format:"LP"', 'text' => 'LP'],
 	['value' => 'format:"Music recording"', 'text' => 'Music recording'],
 	['value' => 'format:"Spoken word recording"', 'text' => 'Spoken word recording'],
+	['value' => 'format:"Streaming Audio"', 'text' => 'Streaming'],
 	['class' => 'cat', 'value' => 'format:"Book"', 'text' => 'Book'],
 	['class' => 'cat', 'value' => 'format:"Dissertations"', 'text' => 'Dissertations'],
 	['class' => 'cat', 'value' => 'format:"E-Resource"', 'text' => 'E-Resource'],
@@ -503,6 +504,7 @@ $formats = [
 	['value' => 'format:"DVD"', 'text' => 'DVD'],
 	['value' => 'format:"Laserdisc"', 'text' => 'Laserdisc'],
 	['value' => 'format:"Video cassette"', 'text' => 'Video cassette'],
+	['value' => 'format:"Streaming Video"', 'text' => 'Streaming'],
 ];
 
 $locations = [
