Added an emergency closure config option to set the display text and change the appearence of available items when set.

--- a/themes/phoenix/templates/ajax/status-available.phtml
+++ b/themes/phoenix/templates/ajax/status-available.phtml
@@ -1,1 +1,6 @@
-<span class="text-success"><?=$this->transEsc("Available")?></span>
+<? $emergency_closure = $this->GetConfig()->getEmergencyClosure() ?>
+<? if ($emergency_closure): ?>
+  <span class="text-danger"><?=$this->transEsc($emergency_closure)?></span>
+<? else: ?>
+  <span class="text-success"><?=$this->transEsc("Available")?></span>
+<? endif; ?>
