Applied Kathy's COVID-19 style changes.

--- a/themes/phoenix/less/item-record.less
+++ b/themes/phoenix/less/item-record.less
@@ -147,10 +147,10 @@ dl {
     margin-bottom: 0;
     h2 {
       display:inline-block;
-      font-size: 1.1em;
+      font-size: 1.35em;  // COVID Change
     }
     h3 {
-      font-size: 1.35em;
+      font-size: 1.1em;  // COVID Change
       font-weight: 600;
       margin: 0 0 0.5em!important; //compiled override
       display: inline-block!important; //compiled override
@@ -255,8 +255,8 @@ a.summaryToggle {
  }
 
 a.eLink {
-  font-size: 1em;
-  padding-top: 7px;
+  font-size: 1.2em; // COVID Change
+  padding-top: 10px;  // COVID Change
   display: block;
 }
 
