--- a/themes/phoenix/templates/myresearch/storagerequest.phtml
+++ b/themes/phoenix/templates/myresearch/storagerequest.phtml
@@ -12,6 +12,13 @@
 submitted. For the status of requested Mansueto items, check <a
 href="/vufind/MyResearch/Holds">Requested Items</a>.</p>
     <? else: ?>
+            <p>Requested items will be retrieved by Library staff and made available for contactless pickup at Regenstein.</p>
+            <ul>
+              <li>Most items will be available for pickup <strong>within 3 business days</strong>.</li>
+              <li>You may place up to 200 requests per quarter, but the paging service may only be able to fill <strong>5 requests per person per day</strong>, depending on staffing and overall request volume.</li>
+              <li><strong>You will receive an email notification when an item is available for pickup</strong>, which will include a link to reserve a 30-minute timeslot to pick up your item(s). Items will be held for up to 7 days.</li>
+              <li>Procedures for contactless pickup will be sent to you when you reserve a timeslot.</li>
+            </ul>
 	        <form action='/vufind/MyResearch/Storagerequest' method='post' name="mansuetoRequests">
             <p>
             <span id="asrselectallornone"></span>
@@ -52,12 +59,13 @@ href="/vufind/MyResearch/Holds">Requested Items</a>.</p>
 
 	        <label for='asrpickuplocation'>Select Pickup Location</label>
             <select id='asrpickuplocation' name='location'>
-	            <option value=''>Select...</option>
-	            <option value='MANSUETO'>Mansueto within 15 min during open hours</option>
+	            <!--<option value=''>Select...</option>-->
+	            <option value='REG'>Regenstein Lib, within 3 business days</option>
+	            <!--<option value='MANSUETO'>Mansueto within 15 min during open hours</option>
 	            <option value='CRERAR'>Crerar Lib, within 1 business day</option>
 	            <option value='LAW'>D'Angelo Law Lib, within 1 business day</option>
 	            <option value='ECKHART'>Eckhart Lib, within 1 business day</option>
-	            <option value='SSAd'>Soc Serv Admin Lib within 1 business day</option>
+	            <option value='SSAd'>Soc Serv Admin Lib within 1 business day</option>-->
 	        </select>
 
             <p style="text-align: right;">	
