--- a/themes/phoenix/templates/myresearch/storagerequest.phtml
+++ b/themes/phoenix/templates/myresearch/storagerequest.phtml
@@ -12,12 +12,12 @@
 submitted. For the status of requested Mansueto items, check <a
 href="/vufind/MyResearch/Holds">Requested Items</a>.</p>
     <? else: ?>
-            <p>Requested items will be retrieved by Library staff and made available for contactless pickup at Regenstein.</p>
+            <p>Requested items will be retrieved by Library staff and made available for pickup at Regenstein.</p>
             <ul>
               <li>Most items will be available for pickup <strong>within 3 business days</strong>.</li>
               <li>You may place up to 200 requests per quarter, but the paging service may only be able to fill <strong>5 requests per person per day</strong>, depending on staffing and overall request volume.</li>
-              <li><strong>You will receive an email notification when an item is available for pickup</strong>, which will include a link to reserve a 30-minute timeslot to pick up your item(s). Items will be held for up to 7 days.</li>
-              <li>Procedures for contactless pickup will be sent to you when you reserve a timeslot.</li>
+              <li><strong>You will receive an email notification when an item is available for pickup</strong>, which will include a link to reserve a 30-minute time slot to pick up your item(s). Items will be held for up to 7 days.</li>
+              <li>Procedures for pickup will be sent to you when you reserve a time slot.</li>
             </ul>
 	        <form action='/vufind/MyResearch/Storagerequest' method='post' name="mansuetoRequests">
             <p>
