--- a/themes/phoenix/templates/Auth/ChoiceAuth/login.phtml
+++ b/themes/phoenix/templates/Auth/ChoiceAuth/login.phtml
@@ -6,7 +6,7 @@
     }
 ?>
 <?php if ($isPageRequest):?>
-  <?=$this->BootstrapAlert()->makeAlert('info', 'If you are unable to log in, please ask for assistance at any reference or circulation desk', ''); ?>
+  <?=$this->BootstrapAlert()->makeAlert('info', '<a href="http://www.lib.uchicago.edu/ask">If you are unable to log in, please ask for assistance at any reference or circulation desk</a>', ''); ?>
 <?php endif; ?>
 <h3 class="col-sm-12"><?=$this->transEsc('choose_login_method')?></h3>
 <div id="authcontainer">
