Altered the alert banner text for people who do not have ILL privileges who try to make a page request.

--- a/themes/phoenix/templates/record/hold.phtml
+++ b/themes/phoenix/templates/record/hold.phtml
@@ -49,7 +49,7 @@
     </ul>
   <?php elseif ($isILLAuthorized == false && $isPickupAtReg):?>
     <div class="alert alert-danger">
-    <p>It appears you do not have permission to make page requests.</p>
+    <p>At this time, paging services are limited to current students, faculty, and staff of University of Chicago. Please monitor the Library website for changes to services as we reopen.</p>
     </div>
   <?php elseif ($isHold):?>
     <ul>
